fix button on mobile

--- a/wp-content/themes/vizeon/css/woocommerce.css
+++ b/wp-content/themes/vizeon/css/woocommerce.css
@@ -1698,6 +1698,15 @@ table.variations a.reset_variations {
   margin: 0 20px 0 0;
 }
 
+.single-product .product-single-main.product-type-simple .button-group {
+  display: inline-flex;
+}
+
+.single-product .product-single-main.product-type-simple .button-group .button-ecommerce{
+  margin-left: 5px;
+}
+
+
 .single-product .swiper-wrapper, .single-product .swiper-slide {
   height: auto !important;
 }
